# btd6farmercpp

./: .gitignore  CMakeLists.txt  README.md
include/: Game.h  Gameplan.h  Logging.h  Mouse.h  OCR.h  Processing.h  Recorder.h  TemplateMatching.h  User.h  Utils.h  Window.h
src/: Gameplan.cpp  Main.cpp  User.cpp
